adaptive is almost ready

--- a/blocks/footer/__list-element/footer__list-element.css
+++ b/blocks/footer/__list-element/footer__list-element.css
@@ -1,3 +1,9 @@
 .footer__list-element {
     margin-top: 5px;
 }
+
+@media (max-width: 500px) {
+    .footer__list-element {
+        margin-top: 25px;
+    }
+}
