--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,8 @@
 .page {
     padding-top: 24px;
     width: 80%;
-    max-width: 1400px;
+    min-width: 320px;
+    max-width: 1000px;
     font-family: "Gilroy", Arial, sans-serif;
     margin: auto;
     -webkit-box-sizing: border-box;
