--- a/blocks/banner/banner.css
+++ b/blocks/banner/banner.css
@@ -8,3 +8,14 @@
     justify-content: space-between;
     box-shadow: 0px 13.8611px 55.4444px #F2F5FA;
 }
+
+@media (max-width: 500px) {
+    .banner {
+        margin: 50px auto 40px auto;
+        justify-content: space-between;
+        flex-direction: column;
+        text-align: center;
+
+
+    }
+}
