--- a/blocks/footer/__box/footer__box.css
+++ b/blocks/footer/__box/footer__box.css
@@ -3,3 +3,12 @@
     justify-content: space-between;
     width: 100%;
 }
+
+@media (max-width: 500px) {
+    .footer__box {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+
+    }
+}
