--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -14,3 +14,12 @@
         margin-top: 48px;
     }
 }
+
+
+@media (max-width: 500px) {
+    .footer__copyright {
+        text-align: center;
+        margin-bottom: 20px;
+        margin-top: 0;
+    }
+}
