--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,6 +3,7 @@
 @import url(__links/footer__links.css);
 @import url(__copyright/footer__copyright.css);
 @import url(__list-element/footer__list-element.css);
+@import url(__header/footer__header.css);
 .footer {
     display: flex;
     flex-direction: column;
