--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -4,22 +4,16 @@
     font-size: 11.0889px;
     line-height: 13px;
     text-decoration: none;
-margin-right:27px;
+    margin-right: 27px;
     color: #73738D;
 }
 
-.header__link:hover {
-    text-decoration: underline;
-    opacity: 0.7;
-}
-
-.header__link:last-of-type {
-    margin-left: 18px;
-}
-
-@media (max-width: 767px) {
+@media (max-width: 500px) {
     .header__link {
-        font-size: 18px;
-        ;
+        font-size: 25px;
+        margin-top: 25px;
+
     }
 }
+
+
