--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,3 +9,13 @@
     max-width: 1184px;
     margin: auto;
 }
+
+@media (max-width: 800px) {
+    .header {
+        display: flex;
+        align-items: center;
+        margin: auto;
+        flex-direction: column;
+
+    }
+}
