--- a/blocks/relationship/__input/relationship__input.css
+++ b/blocks/relationship/__input/relationship__input.css
@@ -8,3 +8,10 @@
     box-shadow: 0 0 17px rgba(0, 0, 0, 0.08);
     width: 297px;
 }
+
+@media (max-width: 500px) {
+    .relationship__input {
+        width: 153px;
+
+    }
+}
