--- a/blocks/relationship/relationship.css
+++ b/blocks/relationship/relationship.css
@@ -15,3 +15,13 @@
     justify-content: space-between;
     padding-top: 24px;
 }
+
+@media (max-width: 800px) {
+    .relationship {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+
+    }
+}
