--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,14 +3,34 @@
           url('../fonts/Gilroy-Regular.woff2') format('woff2'),
           url('../fonts/Gilroy-Regular.ttf') format('ttf');
      font-family: 'Gilroy';
-     font-weight: 400;
+     font-weight: 400;//NORMAL
    }
+
+
+@font-face {
+     src: url('../fonts/Gilroy-Medium.woff') format('woff'),
+     url('../fonts/Gilroy-Medium.woff2') format('woff2'),
+     url('../fonts/Gilroy-Medium.ttf') format('ttf');
+     font-family: 'Gilroy';
+     font-weight: 500;//Medium
+
+}
+
+@font-face {
+     src: url('../fonts/Gilroy-Semibold.woff') format('woff'),
+     url('../fonts/Gilroy-Semibold.woff2') format('woff2'),
+     url('../fonts/Gilroy-Semibold.ttf') format('ttf');
+     font-family: 'Gilroy';
+     font-weight: 600;//SemiBold
+
+}
+
 
 @font-face {
      src: url('../fonts/Gilroy-Bold.woff') format('woff'),
      url('../fonts/Gilroy-Bold.woff2') format('woff2'),
      url('../fonts/Gilroy-Bold.ttf') format('ttf');
      font-family: 'Gilroy';
-     font-weight: bold;
+     font-weight: bold;//700
 
 }
