--- a/blocks/banner/__description/banner__description.css
+++ b/blocks/banner/__description/banner__description.css
@@ -1,7 +1,6 @@
-.footer__copyright {
+.banner__description {
     font-weight: 500;
     font-size: 11.0889px;
-    line-height: 13px;
+    line-height: 150%;
     margin-bottom: 30px;
 }
-
