--- a/blocks/clients/__comment/clients__comment.css
+++ b/blocks/clients/__comment/clients__comment.css
@@ -1,9 +1,9 @@
 .clients__comment {
     text-align: center;
     max-width: 452px;
-    margin: auto;
     font-weight: 500;
     font-size: 14.5542px;
     line-height: 22px;
     color: #73738D;
+    margin: auto 25px 20px;
 }
