--- a/blocks/clients/__name/clients__name.css
+++ b/blocks/clients/__name/clients__name.css
@@ -1,4 +1,8 @@
 .clients__name {
     text-align: center;
-    margin: 0;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14.5542px;
+    line-height: 17px;
+    margin-top: -10px;
 }
