--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,7 +3,7 @@
     font-weight: 500;
     font-size: 11.0889px;
     line-height: 13px;
-    margin-top: 12px;
+    /* margin-top: 12px; */
     color: #73738D;
 }
 
