--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -4,8 +4,9 @@
     font-size: 11.0889px;
     line-height: 13px;
     text-decoration: none;
-    margin-right: 27px;
+    margin-right: 16px;
     color: #73738D;
+    margin-left: 7px;
 }
 
 @media (max-width: 500px) {
