--- a/blocks/banner/banner.css
+++ b/blocks/banner/banner.css
@@ -3,6 +3,7 @@
 @import url(__header/banner__header.css);
 @import url(__description/banner__description.css);
 @import url(__container/banner__container.css);
+@import url(__points/banner__points.css);
 
 .banner {
     display: flex;
@@ -10,6 +11,8 @@
     margin: 90px auto 70px auto;
     justify-content: space-between;
     box-shadow: 0px 13.8611px 55.4444px #F2F5FA;
+    background-color: #FFFFFF;
+    border-radius: 8.31667px;
 }
 
 @media (max-width: 500px) {
