--- a/blocks/clients/__box/clients__box.css
+++ b/blocks/clients/__box/clients__box.css
@@ -5,4 +5,5 @@
     flex-direction: column;
     box-shadow: 0px 13.8611px 55.4444px #F2F5FA;
     border-radius: 8.31667px;
+    background-color: #FFFFFF;
 }
