--- a/blocks/clients/clients.css
+++ b/blocks/clients/clients.css
@@ -6,6 +6,13 @@
 @import url(__pic-container/clients__pic-container.css);
 @import url(__comment/clients__comment.css);
 @import url(__sign/clients__sign.css);
+@import url(__elem/clients__elem_boy.css);
+@import url(__elem/clients__elem_girl.css);
+@import url(__elem/clients__elem_beard.css);
+@import url(__elem/clients__elem_man.css);
+@import url(__elem/clients__elem_half.css);
+@import url(__elem/clients__elem_laugh.css);
+@import url(__elem/clients__blue-points.css);
 
 .clients {
     display: flex;
@@ -18,6 +25,6 @@
 
 @media (max-width: 500px) {
     .clients {
-margin-top:0;
+        margin-top: 0;
     }
 }
