--- a/blocks/clients/__elem/clients__elem_girl.css
+++ b/blocks/clients/__elem/clients__elem_girl.css
@@ -2,10 +2,12 @@
     z-index: 5;
     position: absolute;
     width: 69.58px;
-    height: auto;
+    height: 69.58px;
     left: 775.85px;
     top: 782.38px;
     animation: clients__elem_girl 5s 1 ease;
+    background-image: url(../../../images/girl.png);
+    background-repeat: no-repeat;
 }
 
 
