--- a/blocks/header/__elem/header__elem_orange-bighalf.css
+++ b/blocks/header/__elem/header__elem_orange-bighalf.css
@@ -1,11 +1,13 @@
 .header__elem_orange-bighalf {
     z-index: -1;
     position: absolute;
-    width: 36px;
+    width: 40px;
     height: 127px;
     left: 0;
     top: 490.99px;
     animation: header__elem_orange-bighalf 5s 1 ease;
+    background-image: url(../../../images/4.png);
+    background-repeat: no-repeat;
 }
 
 
