--- a/blocks/header/__elem/header__elem_red.css
+++ b/blocks/header/__elem/header__elem_red.css
@@ -4,8 +4,10 @@
     width: 68px;
     right: 499px;
     top: -24px;
+    background-repeat: no-repeat;
     z-index: 0;
     animation: header__elem_red 5s 1 ease;
+    background-image: url(../../../images/1.svg);
 
 }
 
