--- a/blocks/banner/__button/banner__button.css
+++ b/blocks/banner/__button/banner__button.css
@@ -2,3 +2,9 @@
     margin-right: 23px;
     background: #26C296;
 }
+
+@media (max-width: 500px) {
+    .banner__button {
+        margin-bottom: 15px;
+    }
+}
