--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -7,4 +7,10 @@
     font-size: 11.0889px;
     line-height: 13px;
     border: none;
+    cursor: pointer;
+}
+
+.button:hover {
+    opacity: 0.5;
+    transition: 0.5s;
 }
