--- a/blocks/clients/__elem/clients__blue-points.css
+++ b/blocks/clients/__elem/clients__blue-points.css
@@ -5,4 +5,8 @@
     top: 161.06%;
     bottom: 34.48%;
     z-index: -1;
+    width: 50px;
+    height: 50px;
+    background-image: url(../../../images/blue-points.png);
+    background-repeat: no-repeat;
 }
