--- a/blocks/clients/__elem/clients__elem_beard.css
+++ b/blocks/clients/__elem/clients__elem_beard.css
@@ -2,10 +2,12 @@
     z-index: -1;
     position: absolute;
     width: 81.98px;
-    height: auto;
+    height: 81.98px;
     left: 894.36px;
     top: 1003.47px;
     animation: clients__elem_beard 5s 1 ease;
+    background-image: url(../../../images/beard.png);
+    background-repeat: no-repeat;
 
 }
 
