--- a/blocks/clients/__elem/clients__elem_man.css
+++ b/blocks/clients/__elem/clients__elem_man.css
@@ -1,11 +1,13 @@
 .clients__elem_man {
     z-index: -1;
     position: absolute;
-    width: auto;
+    width: 59.72px;
     height: 59.72px;
     left: 59.92px;
     top: 744.27px;
     animation: clients__elem_man 5s 1 ease;
+    background-image: url(../../../images/man.png);
+    background-repeat: no-repeat;
 }
 
 
