--- a/blocks/header/__elem/header__elem_orange.css
+++ b/blocks/header/__elem/header__elem_orange.css
@@ -1,11 +1,13 @@
 .header__elem_orange {
     z-index: -1;
     position: absolute;
-    width: 40.2px;
-    height: 40.2px;
+    width: 43.2px;
+    height: 43.2px;
     left: 642px;
     top: 120px;
     animation: header__elem_orange 5s 1 ease;
+    background-image: url(../../../images/2.png);
+    background-repeat: no-repeat;
 
 }
 
