--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -7,6 +7,12 @@
     margin-right: 16px;
     color: #73738D;
     margin-left: 7px;
+    cursor: pointer;
+}
+
+.header__link:hover {
+    opacity: 0.5;
+    transition: 0.5s;
 }
 
 @media (max-width: 500px) {
