--- a/blocks/relationship/__input/relationship__input.css
+++ b/blocks/relationship/__input/relationship__input.css
@@ -7,6 +7,14 @@
     -webkit-appearance: none;
     box-shadow: 0 0 17px rgba(0, 0, 0, 0.08);
     width: 297px;
+    text-indent: 16px;
+}
+.relationship__input::placeholder {
+    font-weight: 500;
+    font-size: 11.0889px;
+    line-height: 150%;
+    margin-left: 16px;
+    color: rgba(115, 115, 141, 0.6);
 }
 
 @media (max-width: 500px) {
