--- a/blocks/header/__elem/header__elem_points.css
+++ b/blocks/header/__elem/header__elem_points.css
@@ -7,4 +7,7 @@
     z-index: -1;
     background-image: url(../../../images/Group.png);
     background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+
 }
