--- a/blocks/clients/__elem/clients__elem_half.css
+++ b/blocks/clients/__elem/clients__elem_half.css
@@ -5,7 +5,7 @@
     height: 80.44px;
     right: 0;
     top: 713.54px;
-    animation: clients__elem_half 5s 1 ease;
+    animation: clients__elem_half 5s infinite;
 
 }
 
