--- a/blocks/header/__elem/header__elem_orange-big.css
+++ b/blocks/header/__elem/header__elem_orange-big.css
@@ -6,7 +6,7 @@
     height: 60.99px;
     left: 830px;
     top: 518px;
-    animation: header__elem_orange-big 5s 1 ease;
+    animation: header__elem_orange-big 3s infinite;
     background-image: url(../../../images/3.png);
     background-repeat: no-repeat;
 }
