--- a/blocks/clients/__elem/clients__blue-points.css
+++ b/blocks/clients/__elem/clients__blue-points.css
@@ -1,9 +1,7 @@
 .clients__blue-points {
     position: absolute;
-    left: 71.35%;
-    right: 23.95%;
-    top: 161.06%;
-    bottom: 34.48%;
+    left: 717px;
+    top: 1119px;
     z-index: -1;
     width: 50px;
     height: 50px;
