--- a/blocks/header/__elem/header__elem_points.css
+++ b/blocks/header/__elem/header__elem_points.css
@@ -1,8 +1,6 @@
 .header__elem_points {
-    left: 8.68%;
-    right: 86.62%;
-    top: 27.8%;
-    bottom: 86.74%;
+    right: 861px;
+    top: 197px;
     position: absolute;
     z-index: -1;
     background-image: url(../../../images/Group.png);
