--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,15 +1,17 @@
 .header__link {
-    font-family: Gilroy;
+    font-family: Gilroy, serif;
     font-weight: 500;
     font-size: 11.0889px;
     line-height: 13px;
     text-decoration: none;
-    margin-right: 16px;
+    margin-right: 29px;
     color: #73738D;
-    margin-left: 7px;
     cursor: pointer;
 }
 
+.header__link:last-child {
+   margin-right: 0;
+}
 .header__link:hover {
     opacity: 0.5;
     transition: 0.5s;
