--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,7 +5,7 @@
     width: 80%;
     min-width: 250px;
     max-width: 997px;
-    font-family: "Gilroy", Arial, sans-serif;
+    font-family: "Gilroy", sans-serif;
     margin: auto;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
