--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,8 @@
 @import url(../blocks/banner/banner.css);
 @import url(../blocks/button/button.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/wrap/wrap.css);
+
 
 
 
