--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,7 @@
 @import url(../blocks/button/button.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/wrap/wrap.css);
+@import url(../blocks/main-wrap/main-wrap.css);
 
 
 
